// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon \`component\` prop can access to svg defs if has children 1`] = `
<span
  class="anticon my-home-icon"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
    />
  </svg>
</span>
`;

exports[`Icon should give warning and render <i>{null}</i> 1`] = `
<span
  class="anticon"
  role="img"
/>
`;

exports[`Icon should support pass svg paths as children 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</span>
`;

exports[`Icon should support svg react component 1`] = `
<span
  class="anticon my-home-icon"
  role="img"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
    />
  </svg>
</span>
`;

exports[`Icon support render svg as component 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  />
</span>
`;
